<resources>
    <string name="app_name">Tourist</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_fedart_tourist_guide_application_brisbane_this_beautiful_city_has_a_river_going_from_the_heart_of_the_city">Welcome to FEDART tourist guide application, Brisbane. This beautiful city has a river going from the heart of the city.</string>
    <string name="brisbane_virtual_tour">Brisbane Virtual Tour</string>
    <string name="brisbane_top_view">Brisbane Top View</string>
    <string name="todo">TODO</string>
    <string name="scan_qr">Scan Qr Code</string>
    <string name="button">Button</string>
    <string name="fed_art">FED ART</string>
    <string name="textview">TextView</string>
    <string name="Menu" />
    <string name="scan_qr_code_to_scan_the_code_and_get_the_points">Scan Qr Code and get the points.</string>
    <string name="upload">Upload</string>
    <string name="contribute">Contribute</string>
    <string name="select_the_pictureto_upload">Select images to upload.</string>
    <string name="photos_from_gallery">Photos from Gallery.</string>
    <string name="to_do">TODO</string>
    <string name="to_doo">TODO</string>
    <string name="too_do">TODO</string>
    <string name="discover">Discover</string>
    <string name="photos_uploaded_by_users">Photos Uploaded by users.</string>
    <string name="toodo">TODO</string>
    <string name="toodoo">TODO</string>
    <string name="todoo">TODO</string>
    <string name="fed_store">Fed Store</string>
    <string name="with_available_pobalance_you_are_able_to_buy_the_below_mentioned_merchandise_alternatively_click_the_button_below_to_go_the_website_to_buy_more_merchandise_online">With Available pobalance you are able to buy the below mentioned merchandise, Alternatively Click the button below to go the website to buy more merchandise online.</string>
    <string name="please_check_in_at_the_reception_at_uni_after_buying_it_from_here_or_the_marketplace_within_the_application">Please check in at the reception at uni after buying it from here or the marketplace within the application.</string>
    <string name="these_fedcoins_can_be_exchanged_for_federation_university_merchandise">These Fedcoins can be exchanged for Federation University Merchandise.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="go_back">Go Back</string>
    <string name="log_in">Log In</string>
    <string name="login">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_maps">Maps</string>
    <string name="title_camera">Camera</string>
    <string name="userPref">userPref</string>
    <string name="userdata">userdata</string>
    <string name="brisbane_tour_guide">A.R Brisbane Tour Guide</string>
    <string name="souht_bank">South Bank</string>
    <string name="ann_st">Ann St.</string>
    <string name="art_gallery">Federation University Art Gallery</string>
    <string name="profile">Profile</string>
    <string name="marketplace">Marketplace</string>
    <string name="fedcoin">Fedcoin</string>
    <string name="about">About</string>
    <string name="help_feedback">Help and Feedback</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="see_more">See More</string>
    <string name="help">Help</string>
    <string name="send">Send</string>
    <string name="item_for_token">"Item for # token "</string>
    <string name="sample_text">Sample Text</string>
    <string name="privacy">privacy</string>
    <string name="whats_new">Whats New Today</string>
    <string name="browse_all">Browse All</string>
    <string name="scan_qr_to_initiate">Scan the QR code\nto initiate.</string>
    <string name="fed_gallery">Fed Gallery</string>
    <string name="brisbane_tour">Brisbane Tour</string>
    <string name="START_TOUR" >START TOUR</string>
    <string name="ann_street">Ann Street</string>
    <string name="anzac_square_memorial_galleries">Anzac Square Memorial Galleries</string>
    <string name="macarthur_museum_brisbane">MacArthur Museum Brisbane</string>
    <string name="edward_street">Edward Street</string>
    <string name="old_st_stephen_s_church">Old St Stephen\'s Church</string>
    <string name="elizabeth_street">Elizabeth Street</string>
    <string name="brisbane_city_hall">Brisbane City Hall</string>
    <string name="adelaide_street">Adelaide Street</string>
    <string name="myer_center_brisbane">Myer Center Brisbane</string>
    <string name="queen_street">Queen Street</string>
    <string name="brisbane_city_botanic_gardens">Brisbane City Botanic Gardens</string>
    <string name="alice_street">Alice Street</string>
    <string name="qld_art_museum">QLD Art Museum</string>
    <string name="george_street">George Street</string>
    <string name="treasury_casino_and_hotel_brisbane">Treasury Casino and Hotel Brisbane</string>
    <string name="william_street">William Street</string>
    <string name="wheel_of_brisbane">Wheel of Brisbane</string>
    <string name="russell_street">Russell Street</string>
    <string name="federation_university_brisbane">Federation University Brisbane</string>
    <string name="in_the_heart_of_queensland_s_vibrant_and_multicultural_capital_city_is_our_beautiful_brisbane_city_innovation_campus_which_is_moments_away_from_industry_partners_great_shopping_entertainment_and_cultural_centres_on_our_doorstep">In the heart of Queensland’s vibrant and multicultural capital city, is our beautiful Brisbane City Innovation Campus, which is moments away from industry partners, great shopping, entertainment, and cultural centres on our doorstep.</string>
    <string name="our_campus_provides_the_latest_learning_environments_collaborative_study_spaces_and_personalised_learning_and_support_services_in_addition_students_have_access_to_tech_hubs_and_transformational_learning_spaces_student_lounges_and_fully_equipped_study_rooms">Our campus provides the latest learning environments, collaborative study spaces, and personalised learning and support services. In addition, students have access to tech hubs and transformational learning spaces, student lounges, and fully equipped study rooms.</string>
    <string name="start_virtual_tour">START VIRTUAL TOUR</string>
    <string name="anzac_square">ANZAC SQUARE</string>
    <string name="opened_in_1930_anzac_square_is_the_state_war_memorial_of_queensland_a_significant_public_and_historical_site_dedicated_to_the_men_and_women_who_have_served_their_country_in_conflict_and_in_peace_since_the_boer_war">Opened in 1930, Anzac Square is the State War Memorial of Queensland; a significant public and historical site dedicated to the men and women who have served their country in conflict and in peace since the Boer War.</string>
    <string name="history">HISTORY</string>
    <string name="located_in_the_centre_of_brisbane_with_the_spectacular_shrine_of_remembrance_and_eternal_flame_burning_at_its_heart_anzac_square_provides_permanent_recognition_for_those_who_fought_and_died_in_the_service_of_our_nation_and_preserves_their_legacy_by_offering_generations_of_queenslanders_a_place_to_reflect_on_their_bravery_and_sacrifice">Located in the centre of Brisbane, with the spectacular Shrine of Remembrance and Eternal Flame burning at its heart, Anzac Square provides permanent recognition for those who fought and died in the service of our nation and preserves their legacy by offering generations of Queenslanders a place to reflect on their bravery and sacrifice.</string>
    <string name="macarthur_museum_of_brisbane_is_dedicated_to_telling_the_stories_of_the_allied_campaign_in_the_south_west_pacific_area_swpa_the_role_of_us_general_douglas_macarthur_as_supreme_commander_of_allied_forces_in_swpa_and_the_impact_of_the_war_on_the_city_of_brisbane_and_its_people">MacArthur Museum of Brisbane is dedicated to telling the stories of the Allied campaign in the South-West Pacific Area (SWPA); the role of US General Douglas MacArthur as Supreme Commander of Allied forces in SWPA; and the impact of the war on the city of Brisbane and its people.</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="mac_arthur_museum">MAC ARTHUR MUSEUM</string>
    <string name="about_us">ABOUT US</string>
    <string name="macarthur_museum_looks_behind_the_front_lines_of_the_second_world_war_discover_the_role_brisbane_played_from_1939_1945_by_visiting_the_museum_the_museum_also_focuses_on_the_developing_alliance_between_australia_and_the_us_brought_about_by_the_cooperation_between_the_armed_forces_of_both_countries_during_world_war_two">MacArthur Museum looks behind the front lines of the Second World War. Discover the role Brisbane played from 1939 – 1945 by visiting the Museum.The Museum also focuses on the developing alliance between Australia and the US brought about by the cooperation between the armed forces of both countries during World War Two.</string>
    <string name="in_1859_with_the_appointment_of_bishop_james_quinn_brisbane_became_a_diocese_and_the_church_a_cathedral_when_the_new_cathedral_was_opened_in_1874_this_church_became_a_school_room_during_the_past_century_it_was_used_for_school_church_offices_and_storage_and_was_several_times_threatened_with_demolition">In 1859, with the appointment of Bishop James Quinn, Brisbane became a diocese and the church a cathedral. When the new cathedral was opened in 1874 this church became a school room. During the past century it was used for school, church offices and storage, and was several times threatened with demolition.</string>
    <string name="an_iconic_landmark_on_the_south_bank_skyline_the_channel_seven_wheel_of_brisbane_is_a_breathtaking_way_to_take_in_a_360_degree_panoramic_view_of_spectacular_brisbane_city">An iconic landmark on the South Bank skyline, the Channel Seven Wheel of Brisbane is a breathtaking way to take in a 360-degree panoramic view of spectacular Brisbane city.</string>
    <string name="rising_60_metres_above_the_ground_you_can_enjoy_the_safety_and_comfort_of_a_fully_enclosed_air_conditioned_gondola_that_seats_up_to_8_people_and_is_fun_for_everyone">Rising 60 metres above the ground you can enjoy the safety and comfort of a fully enclosed, air-conditioned gondola that seats up to 8 people and is fun for everyone.</string>
    <string name="visitors_can_choose_to_experience_the_sights_by_day_a_romantic_sunset_ride_or_the_sparkling_city_lights_at_night_with_all_rides_including_an_engaging_audio_tour_of_the_brisbane_landscape">Visitors can choose to experience the sights by day, a romantic sunset ride or the sparkling city lights at night with all rides including an engaging audio tour of the Brisbane landscape.</string>
    <string name="get_directions">Get Directions</string>
</resources>