<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:src="@drawable/vector_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/tokenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_border_rectangle"
        android:gravity="center_vertical"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGoBack">

        <TextView
            style="@style/regularTV"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@+id/coin"
            android:padding="4dp"
            android:text="3.5"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:src="@drawable/coin_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/regularTV"
        android:layout_marginTop="28dp"
        android:padding="4dp"
        android:text="@string/brisbane_tour"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoBack" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="616dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:scrollbars="vertical">


            <TextView
                android:id="@+id/tg_heading0"
                style="@style/regularTV"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/wheel_of_brisbane"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/areaTV0"
                style="@style/regularTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tg_heading0"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:text="@string/russell_street"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img0"
                android:layout_width="370dp"
                android:layout_height="140dp"
                android:layout_below="@+id/areaTV0"
                android:foreground="@drawable/pic_bg"
                android:scaleType="centerCrop"
                android:src="@drawable/tour09" />

            <TextView
                android:id="@+id/tg_body1"
                style="@style/regularTV"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img0"
                android:layout_marginTop="24dp"
                android:text="@string/an_iconic_landmark_on_the_south_bank_skyline_the_channel_seven_wheel_of_brisbane_is_a_breathtaking_way_to_take_in_a_360_degree_panoramic_view_of_spectacular_brisbane_city"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tg_body2"
                style="@style/regularTV"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tg_body1"
                android:layout_marginTop="24dp"
                android:text="@string/rising_60_metres_above_the_ground_you_can_enjoy_the_safety_and_comfort_of_a_fully_enclosed_air_conditioned_gondola_that_seats_up_to_8_people_and_is_fun_for_everyone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tg_body3"
                style="@style/regularTV"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tg_body2"
                android:layout_marginTop="24dp"
                android:text="@string/visitors_can_choose_to_experience_the_sights_by_day_a_romantic_sunset_ride_or_the_sparkling_city_lights_at_night_with_all_rides_including_an_engaging_audio_tour_of_the_brisbane_landscape"
                android:textStyle="bold" />


            <Button
                android:id="@+id/lm_wheel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/tg_body3"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#000000"
                android:text="@string/learn_more"
                android:textSize="12sp" />

            <Button
                android:id="@+id/gd_wheel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/lm_wheel"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#000000"
                android:text="@string/get_directions"
                android:textSize="12sp" />


        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>